--- a/server1/package.json
+++ b/server1/package.json
@@ -20,6 +20,7 @@
     "express-fileupload": "^1.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
+    "multer": "^1.4.5-lts.1",
     "net": "^1.0.2",
     "nodejs": "^0.0.0",
     "nodemailer": "^6.9.13",
